--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "Jerry Blog",
   "author": "Hux <20121954@cqu.edu.cn>",
   "version": "1.7.0",
-  "homepage": "http://fighting.github.io",
+  "homepage": "fighting.github.io",
   "repository": {
     "type": "git",
     "url": "https://github.com/LJerRRy/fighting.github.io"
