modify the baidu seo, add wuqi

--- a/_config.yml
+++ b/_config.yml
@@ -92,6 +92,10 @@ friends: [
     {
         title: "FangHeart",
         href: "http://FangHeart.top"
+    },
+    {
+        title: "AmazingWu",
+        href: "http://amazingwu.xyz"
     }
 ]
 
